# MIRADAS-Heuristic-Combinatorial-Optimization

./: README.md
code/: README.md  compile.sh
code/launcher/: ctsp1_launcher.csh
code/output/CTSP1_250511120743/algorithm_1/att48/sol/: att48_p3_f50_lL.sol  att48_p3_f50_lM.sol  att48_p3_f70_lH.sol  att48_p3_f70_lM.sol  att48_p3_f90_lH.sol  att48_p5_f50_lH.sol  att48_p5_f50_lM.sol  att48_p5_f70_lH.sol  att48_p5_f70_lM.sol  att48_p5_f90_lL.sol
code/output/CTSP1_250511120743/algorithm_1/bayg29/sol/: bayg29_p3_f70_lH.sol  bayg29_p3_f70_lL.sol  bayg29_p3_f90_lH.sol  bayg29_p5_f50_lH.sol  bayg29_p5_f70_lH.sol
code/output/CTSP1_250511120743/algorithm_1/bays29/sol/: bays29_p3_f50_lL.sol  bays29_p3_f70_lH.sol  bays29_p3_f70_lL.sol  bays29_p5_f50_lM.sol
code/output/CTSP1_250511120743/algorithm_1/br17/sol/: br17_p3_f90_lH.sol  br17_p5_f70_lM.sol  br17_p5_f90_lH.sol
code/output/CTSP1_250511120743/algorithm_1/burma14/sol/: burma14_p3_f70_lM.sol  burma14_p3_f90_lH.sol  burma14_p5_f50_lL.sol
code/output/CTSP1_250511120743/algorithm_1/dantzig42/sol/: dantzig42_p3_f50_lM.sol  dantzig42_p3_f70_lL.sol  dantzig42_p3_f90_lM.sol  dantzig42_p5_f50_lH.sol  dantzig42_p5_f50_lL.sol  dantzig42_p5_f90_lH.sol
code/output/CTSP1_250511120743/algorithm_1/eil51/sol/: eil51_p3_f50_lL.sol  eil51_p3_f70_lL.sol  (+4 more)
code/output/CTSP1_250512192919/algorithm_1/sta/: CTSP1_stat.txt
code/output/CTSP1_250512200620/algorithm_1/sta/: CTSP1_stat.txt
code/output/CTSP1_250513112133/algorithm_1/sta/: CTSP1_stat.txt
code/output/CTSP1_250513140058/algorithm_1/sta/: CTSP1_stat.txt
code/output/CTSP1_250513173412/algorithm_1/sta/: CTSP1_stat.txt
code/output/CTSP1_250513190104/algorithm_1/sta/: CTSP1_stat.txt
code/output/CTSP1_250514104139/algorithm_1/sta/: CTSP1_stat.txt
code/output/CTSP1_250515124530/algorithm_1/sta/: CTSP1_stat.txt
code/sources/: CMakeLists.txt
code/sources/heuristic/: CMakeLists.txt
code/sources/heuristic/include/: constructive_TSP_based.hpp  reduce_fitness.hpp  sync_heuristic.hpp
code/sources/heuristic/src/: constructive_TSP_based.cpp  gen_two_opt.cpp  reduce_fitness.cpp  sync_heuristic.cpp
code/sources/input/: CMakeLists.txt
code/sources/input/include/: CTSP_2_heuristic_a_input.hpp  CTSP_instance.hpp  TSPLIB_instance.hpp  io_files.hpp  sync_heuristic_a_input.hpp
code/sources/input/src/: CTSP_2_heuristic_a_input.cpp  CTSP_instance.cpp  TSPLIB_instance.cpp  io_files.cpp  sync_heuristic_a_input.cpp
code/sources/main/: CMakeLists.txt
code/sources/main/src/: main.cpp
code/sources/solution/: CMakeLists.txt
code/sources/solution/include/: sync_plan.hpp  sync_solution.hpp
code/sources/solution/src/: sync_plan.cpp  sync_solution.cpp
code/sources/util/: CMakeLists.txt
code/sources/util/include/: bitset.hpp  matrix.hpp
code/sources/util/src/: matrix.cpp
(+438 files in other folders)
